mobile preview fixed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Quiz Mania",
-  "name": "Quiz app using Open Trivia API.",
+  "name": "Earn points. Make your name in scoreboard.",
   "icons": [
     {
       "src": "favicon.ico",
